<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TAAM Collection Management System</string>
    <string name="title">Toronto Asian Art Museum Collection Management</string>

    <string name="hint_period">Period</string>
    <string name="hint_description">Description</string>
    <string name="button_upload">Upload file here</string>
    <string name="button_submit">Submit</string>

    <!-- Home Screen -->
    <string name="taam_full_name">Toronto Asian Art Museum Collections Management</string>
    <string name="admin_button_content">Admin</string>
    <string name="log_out_button_content">Log Out</string>
    <string name="view_button_content">View</string>
    <string name="search_button_content">Search</string>
    <string name="add_button_content">Add</string>
    <string name="remove_button_content">Remove</string>
    <string name="report_button_content">Report</string>
    <string name="admin_logged_in">Logged in as admin.</string>

    <!-- Add Item Screen -->
    <string name="no_lot_number_error">Please enter a lot number.</string>
    <string name="no_name_error">Please enter a name.</string>
    <string name="no_category_error">Please enter a category.</string>
    <string name="no_period_error">Please enter a period.</string>
    <string name="no_description_error">Please enter a description.</string>
    <string name="no_image_error">Please upload an image.</string>

    <!-- Login Screen -->
    <string name="username_input_text">Username:</string>
    <string name="password_input_text">Password:</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="log_in_button_content">Log in</string>

    <!-- Report Screen -->
    <string name="generate_report">Generate Report</string>

    <string name="hint_lot_number">Lot number</string>
    <string name="hint_name">Name of collection</string>
    <string name="hint_category">Category</string>
    <string name="hint_period_of_time">Period of time</string>
    <string name="using">Using</string>
    <string name="dec_pic_only">Generate report with description and picture only.</string>

    <string name="generating_report" tools:ignore="TypographyEllipsis">Generating report...\nPlease don\'t close this screen.</string>
    <string name="generating_report_progress" tools:ignore="TypographyEllipsis">%1$s \n%2$d\%% complete</string>
    <string name="report_complete">Report generation complete.\nIt is in your Downloads folder.</string>
    <string name="generate_report_input_empty_error">Please enter the %1$s.</string>
    <string name="generate_report_database_error">A database error occurred when generating the PDF.</string>
    <string name="unknown_error">An unknown error has occurred while generating the PDF. Please try again.</string>
    <string name="generate_report_success">Successfully generated report. The PDF has been placed in your downloads folder with the file name: %1$s</string>
</resources>