<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fadingEdge="none">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:background="@drawable/headerbg2"
        android:elevation="1dp"
        android:fadingEdge="vertical"
        android:fontFamily="@font/oswald"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/taam_full_name"
        android:textAlignment="center"
        android:textColor="#D9BC20"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:background="#FFFFFF"
        android:fadingEdge="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adminLoginContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/adminLogInTextDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/admin_logged_in"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/admin_button_content"
            android:textColorLink="#D9BC20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/log_out_button_content"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/buttonAdmin"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/homeScreenButtonContainer"
        app:layout_constraintTop_toBottomOf="@+id/adminLoginContainer"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:id="@+id/homeScreenButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/homeScreenUserButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/view_button_content" />

            <Button
                android:id="@+id/buttonSearch"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/search_button_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/homeScreenAdminButtonContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/add_button_content"
                />

            <Button
                android:id="@+id/buttonRemove"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/remove_button_content" />

            <Button
                android:id="@+id/buttonReport"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/report_button_content" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/noResultsMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No results."
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adminLoginContainer" />


</androidx.constraintlayout.widget.ConstraintLayout>