<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:gravity="center_vertical"
                android:text="@string/username_input_text"
                android:textColor="#090909"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:text="@string/password_input_text"
                android:textColor="#0B0B0B"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/loginScreenUsernameInput"
                android:layout_width="168dp"
                android:layout_height="52dp"
                android:background="#D4AF37"
                android:ems="10"
                android:hint="@string/hint_username"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:textColorHint="#000000" />

            <EditText
                android:id="@+id/loginScreenPasswordInput"
                android:layout_width="168dp"
                android:layout_height="52dp"
                android:layout_marginTop="20dp"
                android:background="#D4AF37"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textColorHint="@color/black"
                android:textColorLink="#D9BC20" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="#d4af37"
        android:shadowColor="#000000"
        android:text="@string/log_in_button_content"
        android:textColor="#000000"
        android:textColorLink="#D4AF37"
        app:iconTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>